package br.unitins.topicos1.bone.dto;

public record EstampaDigitalDTO(
    String nome,
    String tipo,
    String posicao,
    String descricao,
    String resolucao
) {}
