@startuml
skinparam classAttributeIconSize 0

' =======================
' ENUMS
' =======================
enum Bordado {
  COM_BORDADO
  SEM_BORDADO
  PERSONALIZADO
}

enum Perfil {
  ADM
  USER
}

' =======================
' CLASSES
' =======================
class Bone {
  - id: Long
  - nome: String
  - cor: String
  - categoriaAba: String
  - tamanhoAba: Float
  - profundidade: Float
  - circunferencia: String
}

class Estoque {
  - id: Long
  - quantidade: Integer
  - dataAtualizacao: LocalDate
  + verificarDisponibilidade(): Boolean
  + atualizarQuantidade(qtd: Integer): void
  + adicionarQuantidade(qtd: Integer): void
}

class Marca {
  - id: Long
  - nome: String
}

class Material {
  - id: Long
  - nome: String
}

class Modelo {
  - id: Long
  - nome: String
  - categoria: String
  - estilo: String
}

abstract class Estampa {
  - id: Long
  - nome: String
  - posicao: String
  - descricao: String
}

class EstampaBordada {
  - corLinha: String
  - quantCores: Integer
}

class EstampaDigital {
  - resolucao: String
}

class Pedido {
  - id: Long
  - data: LocalDateTime
}

class ItemPedido {
  - id: Long
  - quantidade: Integer
  - preco: Double
  + getSubTotal(): Double
}

class Usuario {
  - id: Long
  - nome: String
  - login: String
  - senha: String
}

class Endereco {
  - id: Long
  - cep: String
  - logradouro: String
  - numero: String
}

class Cidade {
  - id: Long
  - nome: String
}

class Estado {
  - id: Long
  - nome: String
  - sigla: String
}

abstract class Pagamento {
  - id: Long
  - valor: Double
  - data: LocalDateTime
  - status: String
}

class Cartao {
  - nomeTitular: String
  - numero: String
  - validade: String
  - cvv: String
}

class Boleto {
  - codigoBarras: String
  - dataVencimento: LocalDate
}

class Pix {
  - chave: String
  - tipoChave: String
}

' =======================
' HERANÇA
' =======================
Estampa <|-- EstampaBordada
Estampa <|-- EstampaDigital

Pagamento <|-- Cartao
Pagamento <|-- Boleto
Pagamento <|-- Pix

' =======================
' RELACIONAMENTOS COM ATRIBUTOS
' =======================

Bone "1" *-- "1" Estoque : estoque
Bone "*" -- "1" Marca : marca
Bone "*" -- "1" Material : material
Bone "*" -- "1" Modelo : modelo
Bone "*" -- "*" Estampa : estampas

Pedido "1" *-- "*" ItemPedido : itens
ItemPedido "*" -- "1" Bone : bone

Pedido "*" -- "1" Usuario : usuario
Pedido "*" o-- "1" Endereco : endereco

Endereco "*" -- "1" Cidade : cidade
Cidade "*" -- "1" Estado : estado

Pedido "1" *-- "1" Pagamento : pagamento

' =======================
' DEPENDÊNCIA COM ENUMS
' =======================

Usuario ..> Perfil : perfil
Bone ..> Bordado : bordado

@enduml
